[tool.poetry]
name = "disjoint_set"
version = "0.7.2"
description = "Disjoint Set data structure implementation for Python"
authors = ["Maciej Rapacz <mmrapacz@protonmail.ch>"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
tox = "^3.19.0"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
