[tool.poetry]
name = "disjoint-set"
version = "0.7.4"
description = "Disjoint Set data structure implementation for Python"
authors = ["Maciej Rapacz <mmrapacz@protonmail.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "disjoint_set" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
tox = "^4.14.1"
twine = "^5.0.0"
pre-commit = "3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
